# valet

./: .coveragerc  .gitattribute  .gitignore  .gitreview  .stestr.conf  .testr.conf  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  groups  project.config  requirements.txt  run_all_tests.sh  run_examples.sh  run_test.sh  run_until_fail.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
api-ref/source/: conf.py  index.rst  status.yaml  template.inc
api-ref/source/v1/: groups.inc  index.rst  parameters.yaml  placements.inc  plans.inc  status.inc
debian/: aic-valet-core.dirs  aic-valet-core.install  aic-valet-core.logrotate  aic-valet-core.postinst  aic-valet-core.postrm  aic-valet-core.preinst  aic-valet-core.prerm  aic-valet-openstack-plugins.postinst  aic-valet-openstack-plugins.prerm  changelog  control  copyright  rules
devstack/: .plugin.sh.swp  README.md  README.rst  clean-valet-cleanup.sh  clean-valet-uninstall.sh  plugin.sh  settings  stack-valet-music-configure.sh  stack-valet-music-install.sh  stack-valet-openstack-configure.sh  stack-valet-plugins-configure-manual.sh  stack-valet-python-install.sh  stack-valet-services-start.sh  stack-valet-valet-configure.sh  stack-valet-valet-install.sh  unstack-valet-services-stop.sh
doc/: explain-heat-plugin.rst  explain-plugins.rst  ha.md  ostro-howto.rst  ostro.md  ostro_listener.md  ostro_release.md  rest_api.md  valet.md  valet_api.md  valet_os.md
doc/source/: conf.py  contributing.rst  devstack.rst  heat.rst  index.rst
doc/source/api/: api.rst  examples.rst  index.rst
doc/source/engine/: engine.rst  index.rst
doc/source/plugins/: heat-lcr-plugin.rst  valet_os.rst
etc/apache2/: 180-valet.conf
etc/valet/: valet-config-generator.conf  valet.conf  valet.conf.sample
etc/valet/api/: app.apache2  app.wsgi  config.py
plugins/: .gitreview  .testr.conf  README.md  exceptions.py  i18n.py  requirements.txt  setup.cfg  setup.py  tox.ini
plugins/common/: valet_api.py
plugins/heat/: constraints.py  group.py  group_assignment.py
plugins/plugins/heat/: plugins.py
plugins/plugins/nova/: valet_filter.py
plugins/tests/unit/: test_plugins.py  test_valet_api.py  test_valet_filter.py
plugins/valet_plugins/: exceptions.py  i18n.py
plugins/valet_plugins/common/: valet_api.py
plugins/valet_plugins/heat/: GroupAssignment.py  README.md  constraints.py  group.py
releasenotes/source/: conf.py  index.rst  unreleased.rst
tools/conf.d/: HAValet.conf  music.conf
tools/utils/: cleandb.sh  pecan_populate.sh  populate.cql
valet/api/: PKG-INFO  __init__.py  app.py  app.wsgi  conf.py  wsgi.py
valet/api/common/: __init__.py  compute.py  hooks.py  i18n.py  identity.py  identity.py.save  messaging.py  ostro_helper.py  validation.py
valet/cli/: groupcli.py  valetcli.py
valet/common/: __init__.py  conf.py  config.py  music.py
valet/conf/: __init__.py  base.py  engine.py  music.py  server.py
valet/db/: api.py
valet/db/migration/: alembic.ini  api.py  initialize.py
valet/db/models/: event.py  events.py  group.py  groups.py  placement.py  placement_requests.py  placement_result.py  placement_results.py  placements.py  plan.py  plans.py
valet/db/sqlalchemy/: api.py
valet/engine/: conf.py
valet/engine/listener/: PKG-INFO  listener_manager.py  oslo_messages.py
valet/engine/resource_manager/: compute.py  compute_manager.py  compute_simulator.py  heat.py  metadata_manager.py  naming.py  nova_compute.py  resource.py  resource_base.py  stack_manager.py  topology.py  topology_manager.py  topology_simulator.py
valet/ha/: ha_valet.cfg  ha_valet.py  ha_valet2.cfg
valet/plugins/: .gitignore
valet/tests/: base.py
valet_plugins/: .coveragerc  README  README.md  RELEASE  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
valet_plugins/valet_plugins/: PKG-INFO
valet_plugins/valet_plugins/common/: valet_api.py
valet_plugins/valet_plugins/heat/: GroupAssignment.py  README.md
valet_plugins/valet_plugins/plugins/heat/: plugins.py
valet_plugins/valet_plugins/plugins/nova/: valet_filter.py
valet_plugins/valet_plugins/tests/: base.py
valet_plugins/valet_plugins/tests/unit/: test_plugins.py  test_valet_api.py  test_valet_filter.py
valet_plugins/valet_plugins/tests/unit/mocks/heat/common/: i18n.py
valet_plugins/valet_plugins/tests/unit/mocks/heat/engine/: lifecycle_plugin.py
valet_plugins/valet_plugins/tests/unit/mocks/nova/: i18n.py
valet_plugins/valet_plugins/tests/unit/mocks/nova/scheduler/: filters.py
(+319 files in other folders)
