[metadata]
name = openstack-valet
summary = Valet Placement Service
description-file = README.rst
keywords = placement, service, openstack
version = 1.0
author = OpenStack
home-page = http://www.openstack.org/
license = Apache License, Version 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
builders = html,man
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[files]
packages = valet
    plugins
data_files = etc/valet/ = etc/*
    plugins/heat = plugins/heat/*

[entry_points]
pecan.command =
    populate = valet.api.v1.commands.populate:PopulateCommand
tempest.test_plugins =
    valet_tests = valet.tests.tempest.plugin:ValetTempestPlugin
#cinder.scheduler.filters =
#    ValetFilter = valet_os.cinder.valet_filter:ValetFilter
heat.stack_lifecycle_plugins =
    valet.lifecycle_plugin = valet.plugins.heat.plugins:ValetLifecyclePlugin
