[metadata]
name = valet_plugins
version = 1.0
summary = Valet Orchestration Plugins for OpenStack
description-file = README.md
author = AT&T
author-email = jdandrea@research.att.com
homepage = https://github.com/att-comdev/valet
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    valet_plugins
data_files =
    valet_plugins/heat = valet_plugins/heat/*

[entry_points]
#cinder.scheduler.filters =
#    ValetFilter = valet_os.cinder.valet_filter:ValetFilter
heat.stack_lifecycle_plugins =
    valet.lifecycle_plugin = valet_plugins.plugins.heat.plugins:ValetLifecyclePlugin
